# rust_matching_engine

./: Cargo.toml  README.md  config.json
src/: lib.rs  main.rs
src/connecting_to_exchanges/: deribit_connection.rs  for_all_exchanges.rs  mod.rs  parse_book_message.rs
src/matching_engine/: engine.rs  mod.rs  orderbook.rs  tests.rs
src/warp_websocket/: create_server.rs  handler.rs  mod.rs  ws.rs
