[package]
name = "rust_matching_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls", "tokio-native-tls"]}
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.125"
futures-util = "0.3.30"